--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "joi": "^17.13.3",
     "pg": "^8.16.0",
     "uuid": "^11.1.0"
   }
