--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "@supabase/supabase-js": "^2.49.8",
+    "bcrypt": "^6.0.0",
+    "connect-flash": "^0.1.1",
     "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "express-session": "^1.18.1",
     "joi": "^17.13.3",
+    "method-override": "^3.0.0",
     "pg": "^8.16.0",
     "uuid": "^11.1.0"
   }
